<resources>
    <string name="app_name">myStudies</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_tasks">Tasks</string>
    <string name="nav_menu_instructors">Instructors</string>
    <string name="nav_menu_notes">Notes</string>
    <string name="new_course">New Course</string>
    <string name="new_task">New Task</string>
    <string name="new_instructor">New Instructor</string>
    <string name="new_note">New Note</string>
    <string name="go_back">Go back</string>
    <string name="title">Title</string>
    <string name="semester">Semester</string>
    <string name="ects">ECTS</string>
    <string name="instructor">Instructor</string>
    <string name="type">Type</string>
    <string name="hours">Hours</string>
    <string name="grade">Grade</string>
    <string name="has_grade">Has grade</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="progress_value">30/60</string>
    <string name="weighted_grade_average">Weighted Grade Average</string>
    <string name="weighted_grade_average_value">8.06</string>
    <string name="grade_average">Grade Average</string>
    <string name="grade_average_value">8.06</string>
    <string name="passed_courses">Passed courses</string>
    <string name="passed_courses_value">99/99</string>
    <string name="passed_ects">Passed ECTS</string>
    <string name="passed_ects_value">240</string>
    <string name="decoration_icon">Decoration icon</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="number_st">st</string>
    <string name="number_nd">nd</string>
    <string name="number_rd">rd</string>
    <string name="number_th">th</string>
    <string name="display_settings">Display Settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="info">Info</string>
    <string name="learn_about_app">Learn about app</string>
    <string name="contact">Contact</string>
    <string name="sent_as_your_comments">Sent as your comments</string>
    <string name="settings">Settings</string>
    <string name="select_language">Language</string>
    <string name="completed_tasks">completed tasks</string>
    <string name="deadline">Deadline</string>
    <string name="reminder">Reminder</string>
    <string name="task">Task</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="completed">Completed</string>
    <string name="note">Note</string>
    <string name="total_ects">Total ECTS</string>
    <string name="passing_grade">Passing Grade</string>
    <string name="total_semesters">Total Semesters</string>
    <string name="info_title">Info</string>
    <string name="info_message">This App was developed by Vasilogamvros Evangelos, a postgraduate student of the computer science department of the Aristotle University of Thessaloniki.</string>

    <string-array name="course_types_labels">
        <item>Core pam</item>
        <item>Elective pam</item>
    </string-array>

    <string-array name="theme_entries">
        <item>Same as system</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="theme_values">
        <item>default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string-array name="language_entries">
        <item>Same as system</item>
        <item>English</item>
        <item>Greek</item>
    </string-array>

    <string-array name="language_values">
        <item>default</item>
        <item>en</item>
        <item>el</item>
    </string-array>
</resources>