<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_margin="8dp"
    style="@style/courseCard"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="2dp"
    card_view:contentPadding="3dp"
    app:ignore="NamespaceTypo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/title"
            android:textColor="@color/primary"
            android:textSize="24sp"
            card_view:layout_constraintBottom_toTopOf="@+id/item_course_semester"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_course_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/grade"
            android:textColor="@color/danger"
            android:textSize="30sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_course_semester"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/decoration_icon"
            android:src="@drawable/ic_flag"
            app:tint="@color/success_tint"
            card_view:layout_constraintBottom_toBottomOf="@id/item_course_semester"
            card_view:layout_constraintStart_toStartOf="@id/item_course_title"
            card_view:layout_constraintTop_toTopOf="@id/item_course_semester" />

        <TextView
            android:id="@+id/item_course_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/semester"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toTopOf="@+id/item_course_ects"
            card_view:layout_constraintStart_toEndOf="@+id/icon_course_semester"
            card_view:layout_constraintTop_toBottomOf="@+id/item_course_title"
            card_view:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/icon_course_ects"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@string/decoration_icon"
            android:src="@drawable/ic_workspace_premium"
            app:tint="@color/success_tint"
            card_view:layout_constraintBottom_toBottomOf="@id/item_course_ects"
            card_view:layout_constraintStart_toStartOf="@id/icon_course_semester"
            card_view:layout_constraintTop_toTopOf="@id/item_course_ects" />

        <TextView
            android:id="@+id/item_course_ects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ects"
            android:textSize="16sp"
            android:textColor="@color/secondary"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/icon_course_ects"
            card_view:layout_constraintTop_toBottomOf="@+id/item_course_semester" />

        <ImageView
            android:id="@+id/icon_course_instructor"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/decoration_icon"
            android:src="@drawable/ic_person"
            app:tint="@color/success_tint"
            card_view:layout_constraintBottom_toBottomOf="@+id/item_course_instructor"
            card_view:layout_constraintStart_toEndOf="@+id/item_course_ects"
            card_view:layout_constraintTop_toTopOf="@id/item_course_instructor" />

        <TextView
            android:id="@+id/item_course_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/instructor"
            android:textColor="@color/secondary"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="@id/item_course_ects"
            card_view:layout_constraintStart_toEndOf="@+id/icon_course_instructor"
            card_view:layout_constraintTop_toTopOf="@id/item_course_ects" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>